fix alignment of title with pic

--- a/src/css/tues.css
+++ b/src/css/tues.css
@@ -42,6 +42,7 @@ img.media {
 
 .panel-title {
     font-weight: 200;
+    margin-top: 0px;
 }
 
 .text {
